<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.DetailsActivity">

    <include
        layout="@layout/header_normal"
        android:id="@+id/loutToolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivImg"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/image_placeholder"/>


            <com.app.assignment.customview.TextViewMedium
                android:id="@+id/tvMissionName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Abcd (xxxx)"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"/>

            <TextView
                android:id="@+id/tvLineOne"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_gray"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rocket_name"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvRocketName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rocket_type"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvRocketType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/tvLineTwo"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_gray"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="8dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payload_id"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvPayloadId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/payload_type"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvPayloadType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reused"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvReused"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/manufacturer"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvManufacturer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nationality"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvNationality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/tvLineThree"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_gray"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="8dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/launch_site"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvLaunchSite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>


            <TextView
                android:id="@+id/tvLineFour"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/line_gray"
                android:layout_marginHorizontal="14dp"
                android:layout_marginVertical="8dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/article_link"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvArticleLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="15dp">

                <com.app.assignment.customview.TextViewRegular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wikipedia"
                    android:textSize="14sp"
                    android:textColor="@color/gray"/>

                <com.app.assignment.customview.TextViewRegular
                    android:id="@+id/tvWikipedia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="5dp"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvWatchVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardElevation="2dp"
                android:elevation="2dp"
                app:cardMaxElevation="7dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp">
                <LinearLayout
                    android:id="@+id/loutWatchVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/selector_effect_white">
                    <com.app.assignment.customview.TextViewRegular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/watch_video"
                        android:gravity="center"
                        android:background="#80F1EEEE"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:paddingVertical="5dp"
                        android:paddingHorizontal="15dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>